WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.2-dev, 2013-08-10


This document lists all changes for each version.

For a list of important changes that require manual action, please look at
http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
(file 'NEWS' in sources).


Version 0.4.2 (under dev!)
--------------------------

* core: change color format for options weechat.look.buffer_time_format and
  weechat.look.prefix_{action|error|join|network|quit} from `${xxx}` to
  `${color:xxx}`
* core: add secured data (encryption of passwords or private data): add new
  command /secure and new file sec.conf (task #7395)
* core: rename binary and man page from "weechat-curses" to "weechat"
  (task #11027)
* core: disable build of doc by default, add cmake option ENABLE_MAN to compile
  man page (off by default)
* core: add option "-o" for command /color
* core: fix priority of logical operators in evaluation of expression
  (AND takes precedence over the OR)
* core: remove gap after read marker line when there is no bar on the right
  (bug #39548)
* core: add CA_FILE option in cmake and configure to setup default
  value of option weechat.network.gnutls_ca_file (default is
  "/etc/ssl/certs/ca-certificates.crt") (task #12725)
* core: use "/dev/null" for stdin in hook_process instead of closing stdin
  (bug #39538)
* core: add option "scroll_beyond_end" for command /window (task #6745)
* core: add options weechat.look.hotlist_prefix and weechat.look.hotlist_suffix
  (task #12730)
* core: add option weechat.look.key_bind_safe
* core: fix char displayed at the intersection of three windows (bug #39331)
* core: fix crash in evaluation of expression when reading a string in hdata
  with a NULL value (bug #39419)
* core: fix display bugs with some UTF-8 chars that truncates messages displayed
  (for example U+26C4) (bug #39201)
* core: update man page and add translations (in french, german, italian, and
  japanese)